--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Mantis Angular Dashboard Template</title>
+    <title>MYC | mycinema</title>
     <!-- HTML5 Shim and Respond.js IE11 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 11]>
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="Mantis angular 15+ admin template made using bootstrap 5.2.2, ng-bootstrap 14.x.x and it has huge amount of ready made feature, UI components, pages which completely fulfills any dashboard needs."
+      content="MYC angular 15+ admin template made using bootstrap 5.2.2, ng-bootstrap 14.x.x and it has huge amount of ready made feature, UI components, pages which completely fulfills any dashboard needs."
     />
     <meta
       name="keywords"
