--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
     <meta name="author" content="CodedThemes" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- font style -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.css">
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap"
